CLI version alpha 1

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -11,7 +11,8 @@
                 "phoenix-core",
                 "--debug",
                 "-l",
-                "pcap"
+                "pcap",
+                "-lpthread"
             ],
             "group": {
                 "kind": "build",
