--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "hacking-network.h": "c",
         "io.h": "c",
         "socket.h": "c",
-        "arp.h": "c"
+        "arp.h": "c",
+        "target-guard.h": "c"
     }
 }
